test/ui/src/compile_fail/std/dbg_props_file.rs
fn main() {
    emit::dbg!(file: "x");
}
